--- a/src/website/templates/website/product_list.html
+++ b/src/website/templates/website/product_list.html
@@ -47,11 +47,7 @@
                                         <div class="product-top-filter">
                                             <div class="container-fluid p-0">
                                                 <div class="row">
-                                                    <div class="product-filter-content">
-                                                        <div class="search-count">
-                                                            <h5>Showing Products 1-24 of 10 Result</h5>
-                                                        </div>
-                                                    </div>
+
 
                                                     <div class="col-12">
                                                         <div class="mt-2">
@@ -148,33 +144,49 @@
                                                         <div class="col-xl-6 col-md-6 col-sm-12">
                                                             <nav aria-label="Page navigation">
                                                                 <ul class="pagination">
-                                                                    <li class="page-item"><a aria-label="Previous"
-                                                                                             class="page-link"
-                                                                                             href="#"><span
-                                                                            aria-hidden="true"><i
-                                                                            aria-hidden="true"
-                                                                            class="fa fa-chevron-left"></i></span> <span
-                                                                            class="sr-only">Previous</span></a></li>
-                                                                    <li class="page-item active"><a class="page-link"
-                                                                                                    href="#">1</a></li>
+                                                                            {% if products.has_previous %}
+
+                                                                    <li class="page-item">
+
+                                                                        <a aria-label="Previous" class="page-link" href="?page={{products.previous_page_number}}">
+                                                                            <span aria-hidden="true">
+                                                                                <i class="fa fa-chevron-left"></i>
+                                                                            </span>
+                                                                            <span class="sr-only">Previous</span>
+                                                                        </a>
+                                                                    </li>
+{% else %}
+
+{% endif %}
+{% for i in paginator.page_range %}
+                {% if products.number == i %}
+
+                                                                    <li class="page-item active">
+                                                                        <a class="page-link" >{{i}}</a>
+                                                                    </li>
+                                                                    {% else %}
                                                                     <li class="page-item"><a class="page-link"
-                                                                                             href="#">2</a></li>
-                                                                    <li class="page-item"><a class="page-link"
-                                                                                             href="#">3</a></li>
+                                                                                            href="?page={{ i }}">{{i}}</a></li>
+                                                                    {% endif %}
+                                                                    {% endfor %}
+                                                                              {% if products.has_next %}
+
                                                                     <li class="page-item"><a aria-label="Next"
                                                                                              class="page-link"
-                                                                                             href="#"><span
+                                                                                             href="?page={{products.next_page_number}}"><span
                                                                             aria-hidden="true"><i
                                                                             aria-hidden="true"
                                                                             class="fa fa-chevron-right"></i></span>
                                                                         <span
                                                                                 class="sr-only">Next</span></a></li>
+                                                                    {% else %}
+                                                                    {% endif %}
                                                                 </ul>
                                                             </nav>
                                                         </div>
                                                         <div class="col-xl-6 col-md-6 col-sm-12">
                                                             <div class="product-search-count-bottom">
-                                                                <h5>Showing Products 1-24 of 10 Result</h5>
+                                                                <h5>Showing Products 1-24 of  Result</h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -190,5 +202,6 @@
             </div>
         </div>
 </section>
+
 <!-- section End -->
 {% endblock content %}
