--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -97,7 +97,7 @@
                                 aria-hidden="true" class="fa fa-bookmark fz-16 me-2"></i>wishlist</a>
                         <a
                                 class="btn btn-solid"
-                                href="{% url 'client:sample' object.id %}"><i
+                                href="{% url 'website:read_sample' object.id %}" target="_blank"><i
                                 aria-hidden="true" class="fa fa-book fz-16 me-2"></i>Read Sample</a>
                     </div>
 
