my book link added

--- a/src/administration/client/templates/client/sample_book.html
+++ b/src/administration/client/templates/client/sample_book.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- BACK BUTTON -->
-        <a href="#" id="fb5-button-back">BACK</a>
+        <a href="{% url 'website:home' %}" id="fb5-button-back">BACK</a>
 
         <!-- BACKGROUND FOR BOOK -->
         <div class="fb5-bcg-book"></div>
