--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -95,10 +95,12 @@
                                 class="btn btn-solid"
                                 href="{% url 'client:wishlist-create' object.id %}"><i
                                 aria-hidden="true" class="fa fa-bookmark fz-16 me-2"></i>wishlist</a>
+                        {% if object.book_file %}
                         <a
                                 class="btn btn-solid"
                                 href="{% url 'website:read_sample' object.id %}" target="_blank"><i
                                 aria-hidden="true" class="fa fa-book fz-16 me-2"></i>Read Sample</a>
+                        {% endif %}
                     </div>
 
 
