--- a/src/administration/client/templates/client/include/dashboard_navbar.html
+++ b/src/administration/client/templates/client/include/dashboard_navbar.html
@@ -19,7 +19,7 @@
             <li class="nav-item"><a href="{% url 'client:order_list' %}" class="nav-link">My Orders</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'client:wishlist' %}">My Wishlist</a></li>
             <li class="nav-item"><a href="{% url 'client:address' %}" class="nav-link">My Address</a></li>
-            <li class="nav-item"><a class="nav-link">My Books</a></li>
+            <li class="nav-item"><a href="{% url 'client:book' %}" class="nav-link">My Books</a></li>
             <li class="nav-item"><a  class="nav-link" href="{% url 'account_logout' %}">Log Out</a></li>
         </ul>
     </div>
