TESTS: fake data generators added

--- a/src/administration/admins/templates/admins/post_detail.html
+++ b/src/administration/admins/templates/admins/post_detail.html
@@ -55,11 +55,11 @@
                     </div>
                     <div class="mb-2">
                         <i class="bx bx-calendar-plus"></i>
-                        Created On: <strong>{{ object.visits }}</strong>
+                        Created On: <strong>{{ object.created_on }}</strong>
                     </div>
                     <div class="mb-2">
                         <i class="bx bx-calendar-event"></i>
-                        Last Update: <strong>{{ object.visits }}</strong>
+                        Last Update: <strong>{{ object.updated_on }}</strong>
                     </div>
                     <div class="mb-2">
                         <i class="bx bx-check"></i>
