--- a/src/administration/admins/templates/admins/product_detail.html
+++ b/src/administration/admins/templates/admins/product_detail.html
@@ -134,19 +134,19 @@
                                         <div>
                                             <div class="mb-2">
                                                 <i class="fa fa-book-reader"></i>
-                                                Pages: <strong>00</strong>
+                                                Pages: <strong>{{ object.pages }}</strong>
                                             </div>
                                         </div>
                                         <div>
                                             <div class="mb-2">
                                                 <i class="fa fa-mouse-pointer"></i>
-                                                Clicks: <strong>00</strong>
+                                                Clicks: <strong>{{ object.clicks }}</strong>
                                             </div>
                                         </div>
                                         <div>
                                             <div class="mb-2">
                                                 <i class="fa fa-cart-plus"></i>
-                                                Sales: <strong>00</strong>
+                                                Sales: <strong>{{ object.sales }}</strong>
                                             </div>
                                         </div>
                                     </div>
